--- a/.htaccess
+++ b/.htaccess
@@ -48,5 +48,6 @@
 </IfModule>
 
 RewriteEngine On
+RewriteRule "^/\.well-known/acme-challenge" - [L]
 RewriteCond %{HTTP_HOST} ^www\.fahrplan-langeoog\.de$ [NC]
 RewriteRule ^(.*)$ http://fahrplan-langeoog.de/$1 [L,R=301]
